[package]
name = "wcr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["cargo", "derive"] }
anyhow = "1.0.79"
pretty_assertions = "1.4.0"

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.1.0"
rand = "0.8.5"